# obd

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
cmake/: arm-none-eabi.cmake  cppcheck.cmake  flash.cmake
scripts/: build-debug.sh  build-release.sh  cppcheck.sh  dump-repo.sh  flash.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_display.c  app_display.h  app_obd.c  app_obd.h  button_callback.c  main.c
src/bsp/: CMakeLists.txt  bsp.h.in
src/bsp/nucleo_h753zi/: CMakeLists.txt  board.c  board.h  button.c  button.h  can.c  can.h  can_tp.c  clock.c  clock.h  display_hd44780.c  display_st7789.c  hd44780_i2c.c  i2c.c  i2c.h  kwp2000_hw.c  led.h  log_output.c  resources.h  st7789_spi.c  systick.c  systick.h  tft.c  tft.h  uart.h  uart_debug.c  uart_hw.c  uart_obd.c  wdt.c  wdt.h
src/cmsis/: CMakeLists.txt  cmsis_version.h  stm32h753xx.h  stm32h7xx.h  system_stm32h7xx.h
src/drivers/: CMakeLists.txt
src/drivers/button/: CMakeLists.txt  button.c  button.h  button_callback.h
src/drivers/display/: CMakeLists.txt  display.h  hd44780.h
src/drivers/display/hd44780/: hd44780.c  hd44780.h  hd44780_i2c.h
src/drivers/display/st7789/: font.c  font.h  st7789.c  st7789.h  st7789_spi.h
src/drivers/protocol/: CMakeLists.txt
src/drivers/protocol/obd/: CMakeLists.txt  cmd.c  cmd.h  decoder.c  decoder.h  obd_protocol.h  obd_types.h
src/drivers/protocol/obd/can/: CMakeLists.txt  can_tp.h  obd_protocol.c  protocol.c  protocol.h
src/drivers/protocol/obd/kwp2000/: CMakeLists.txt  kwp2000.c  kwp2000.h  kwp2000_hw.h  kwp2000_timing.h  obd_protocol.c  protocol.c  protocol.h
src/drivers/uart/: CMakeLists.txt  uart.c  uart.h  uart_hw.h  uart_types.h
src/hal/: CMakeLists.txt  can.c  can.h  exti.h  flash.h  gpio.h  i2c.c  i2c.h  iwdg.h  nvic.h  pwr.h  rcc.h  spi.c  spi.h  systick.h  timer.h  uart.c  uart.h
src/lib/: CMakeLists.txt
src/lib/collections/ring_buffer/: ring_buffer.c  ring_buffer.h
src/lib/core/: macros.h  result.h
src/lib/log/: log.c  log.h  log_output.h
src/lib/math/: ema.h
src/lib/string/: str.c  str.h
src/lib/time/: delay.c  delay.h  delay_tick.h
src/startup/: flash.ld  ram.ld  startup.s
test/: CMakeLists.txt
test/lib/: test_ema.c  test_log.c  test_ring_buffer.c  test_str.c
